--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    
+    // Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
 }
 
 apply from: 'capacitor.build.gradle'
