--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/core": "^7.4.2",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.2",
+    "@capacitor/push-notifications": "^7.0.2",
     "@capacitor/status-bar": "7.0.2",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^8.0.0",
