--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^20.0.0",
     "@capacitor/android": "^7.4.2",
     "@capacitor/app": "7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "^7.4.2",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.2",
     "@capacitor/push-notifications": "^7.0.2",
